--- a/help/test.css
+++ b/help/test.css
@@ -1,32 +1,27 @@
-
 @font-face {
     font-family: mHeiTi;
-    src: url('../style/font/PingFang-Regular-subfont.woff') format('woff'),
-        url('../style/font/PingFang Regular.ttf') format('truetype');
+    src: url('../style/font/PingFang Regular.subset.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: mHeiTi;
-    src: url('../style/font/PingFang-Medium-subfont.woff') format('woff'),
-        url('../style/font/PingFang Medium.ttf') format('truetype');
+    src: url('../style/font/PingFang Medium.subset.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: mHeiTi;
-    src: url('../style/font/PingFang-Bold-subfont.woff') format('woff'),
-        url('../style/font/PingFang Bold.ttf') format('truetype');
+    src: url('../style/font/PingFang Bold.subset.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: mHeiTi;
-    src: url('../style/font/PingFang-Heavy-subfont.woff') format('woff'),
-        url('../style/font/PingFang Heavy.ttf') format('truetype');
+    src: url('../style/font/PingFang Heavy.subset.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
 }
@@ -40,7 +35,7 @@ body {
     width: 800px;
     /*viewport width=800*/
     font-size: 30px;
-    font-family: mHeiTi, SimHei;
+    font-family: mHeiTi, emjFont;
     font-weight: 300;
     line-height: 2;
     scroll-behavior: auto;
