--- a/style/main.css
+++ b/style/main.css
@@ -1,59 +1,6 @@
-@font-face {
-    font-family: mHeiTi;
-    src: url('./font/PFSCMedium1.ttf') format('truetype');
-    font-weight: normal;
-}
 
-@font-face {
-    font-family: mHeiTi;
-    src: url('./font/PingFang Bold.subset.ttf') format('truetype');
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: mHeiTi;
-    src: url('./font/SourceHanSansCN-Heavy.subset.ttf') format('truetype');
-    font-weight: 900;
-}
-
-@font-face {
-    font-family: emjFont;
-    src: url('./font/SourceHanSansCN-Medium.subset.ttf') format('truetype');
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: emjFont;
-    src: url('./font/SourceHanSansCN-Bold.subset.ttf') format('truetype');
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: emjFont;
-    src: url('./font/SourceHanSansCN-Heavy.subset.ttf') format('truetype');
-    font-weight: 900;
-}
-/*
-@font-face {
-    font-family: Symbola;
-    src: url('./font/Symbola.subset.ttf') format('truetype');
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: Symbola;
-    src: url('./font/Symbola.subset.ttf') format('truetype');
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: Symbola;
-    src: url('./font/Symbola.subset.ttf') format('truetype');
-    font-weight: 900;
-}
-*/
 font {
-    font-family: mHeiTi, emjFont, Symbola;
+    font-family: mHeiTi, Roboto, emjFont, Symbola;
     font-weight: 900;
     -webkit-user-select: none;
     /* Chrome/Safari/Opera */
@@ -62,14 +9,14 @@ font {
 
 
 button {
-    font-family: mHeiTi, emjFont, Symbola;
+    font-family: mHeiTi, Roboto, emjFont, Symbola;
     -webkit-user-select: none;
     /* Chrome/Safari/Opera */
 }
 
 
 div {
-    font-family: mHeiTi, emjFont, Symbola;
+    font-family: mHeiTi, Roboto, emjFont, Symbola;
     /*font-weight: 900;*/
     -webkit-user-select: none;
     /* Chrome/Safari/Opera */
@@ -77,7 +24,7 @@ div {
 
 
 h1 {
-    font-family: mHeiTi, emjFont, Symbola;
+    font-family: mHeiTi, Roboto, emjFont, Symbola;
     -webkit-user-select: none;
     /* Chrome/Safari/Opera */
 }
@@ -89,7 +36,7 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
-    font-family: mHeiTi, emjFont, Symbola;
+    font-family: mHeiTi, Roboto, emjFont, Symbola;
     font-weight: bold;
     scroll-behavior: smooth;
     -webkit-user-select: none;
