--- a/style/fullscreen.css
+++ b/style/fullscreen.css
@@ -241,3 +241,42 @@ h1 {
 	}
 }
 
+
+.showBody {
+	-webkit-animation: showBody 500ms ease-in;
+	-moz-animation: showBody 500ms ease-in;
+	animation: showBody 500ms ease-in;
+	-webkit-animation-fill-mode: both;
+	-moz-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+@-webkit-keyframes showBody {
+	0% {
+		opacity: 0;
+	}
+	
+	100% {
+		opacity: 1;
+	}
+}
+
+@-moz-keyframes showBody {
+	0% {
+		opacity: 0;
+	}
+	
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes showBody {
+	0% {
+		opacity: 0;
+	}
+	
+	100% {
+		opacity: 1;
+	}
+}
