--- a/style/main.css
+++ b/style/main.css
@@ -1053,3 +1053,176 @@ hr {
 	}
 }
 
+
+.hideBoard {
+	-webkit-animation: hideBoard 500ms ease-in;
+	-moz-animation: hideBoard 500ms ease-in;
+	animation: hideBoard 500ms ease-in;
+	-webkit-animation-fill-mode: both;
+	-moz-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+@-webkit-keyframes hideBoard {
+	0% {
+		opacity: 0.8;
+		display: block;
+	}
+	
+	100% {
+		opacity: 0;
+		display: none;
+	}
+}
+
+@-moz-keyframes hideBoard {
+	0% {
+		opacity: 0.8;
+		display: block;
+	}
+	
+	100% {
+		opacity: 0;
+		display: none;
+	}
+}
+
+@keyframes hideBoard {
+	0% {
+		opacity: 0.8;
+		display: block;
+	}
+	
+	100% {
+		opacity: 0;
+		display: none;
+	}
+}
+
+.showBoard {
+	-webkit-animation: showBoard 500ms ease-in;
+	-moz-animation: showBoard 500ms ease-in;
+	animation: showBoard 500ms ease-in;
+	-webkit-animation-fill-mode: both;
+	-moz-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+@-webkit-keyframes showBoard {
+	0% {
+		opacity: 0;
+		display: none;
+	}
+	
+	100% {
+		opacity: 0.8;
+		display: block;
+	}
+}
+
+@-moz-keyframes showBoard {
+	0% {
+		opacity: 0;
+		display: none;
+	}
+	
+	100% {
+		opacity: 0.8;
+		display: block;
+	}
+}
+
+@keyframes showBoard {
+	0% {
+		opacity: 0;
+		display: none;
+	}
+	
+	100% {
+		opacity: 0.8;
+		display: block;
+	}
+}
+
+
+.showButtons {
+	-webkit-animation: showButtons 500ms ease-in;
+	-moz-animation: showButtons 500ms ease-in;
+	animation: showButtons 500ms ease-in;
+	-webkit-animation-fill-mode: both;
+	-moz-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+@-webkit-keyframes showButtons {
+	0% {
+		width: 100%;
+	}
+	
+	100% {
+		width: 500%;
+	}
+}
+
+@-moz-keyframes showButtons {
+	0% {
+		width: 100%;
+	}
+	
+	100% {
+		width: 500%;
+	}
+}
+
+@keyframes showButtons {
+	0% {
+		width: 100%;
+	}
+	
+	100% {
+		width: 500%;
+	}
+}
+
+
+
+
+.hideButtons {
+	-webkit-animation: hideButtons 500ms ease-in;
+	-moz-animation: hideButtons 500ms ease-in;
+	animation: hideButtons 500ms ease-in;
+	-webkit-animation-fill-mode: both;
+	-moz-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+@-webkit-keyframes hideButtons {
+	0% {
+		width: 500%;
+	}
+	
+	100% {
+		width: 100%;
+	}
+}
+
+@-moz-keyframes hideButtons {
+	0% {
+		width: 500%;
+	}
+	
+	100% {
+		width: 100%;
+	}
+}
+
+@keyframes hideButtons {
+	0% {
+		width: 500%;
+	}
+	
+	100% {
+		width: 100%;
+	}
+}
+
